# basic-data-structures

./: README.md
doubly_linked_list/: configure.ac
doubly_linked_list/src/: Makefile.am  list.c  list.h  queue.c  queue.h  stack.c  stack.h  test.c
doubly_linked_list/tests/: Makefile.am  check_list.c  check_stack.c
queue/: .gitignore  Makefile  README.md  configure.ac  queue.c  queue.h  test.c
queue/src/: Makefile.am  queue.c  queue.h  test.c
queue/tests/: Makefile.am  check_queue.c
singly_linked_list/: .gitignore  Makefile  configure.ac  list.h
singly_linked_list/src/: Makefile.am  list.c  list.h  queue.c  queue.h  stack.c  stack.h  test.c
singly_linked_list/tests/: Makefile.am  check_list.c  check_queue.c  check_stack.c
stack/: .gitignore  Makefile  README.md  autogen.sh  configure.ac  stack.c  stack.h  test.c
stack/src/: Makefile.am  stack.c  stack.h  test.c
stack/tests/: Makefile.am  check_stack.c
